--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@ plugins {
     id 'org.jetbrains.intellij' version '1.13.3'
 }
 
-group 'com.github.zjb-it'
+group 'com.github.tlbcc'
 //version '2021.3.1-1'
-version '2023.2.3'
+version '2023.3.3'
 
 repositories {
     repositories {
@@ -23,7 +23,8 @@ dependencies {
 intellij {
 //    version '2021.2.1'
 //    version '2021.2.4'
-    version = '2023.2'
+//    version = '2023.2'
+    version = '2023.3.3'
 //    version.set("2021.2.4")
     plugins = ['java','yaml']
 
